fix: fix videoplayer not showing with countdown active, adjust countdown styling

--- a/src/components/Countdown/Countdown.scss
+++ b/src/components/Countdown/Countdown.scss
@@ -1,5 +1,5 @@
 .countdownFieldNumber {
-  width: 80px;
+  width: 70px;
 }
 
 .countdownFieldDots {
@@ -8,7 +8,7 @@
 
 @media (min-width: 768px) {
   .countdownFieldNumber {
-    width: 124px;
+    width: 106px;
   }
 
   .countdownFieldDots {
